WordBuddy/k8s/identity-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: identity-api
  namespace: wordbuddy
spec:
  selector:
    app: identity-api
  ports:
    - port: 8080
      targetPort: 8080
