WordBuddy/k8s/notification-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: notification-api
  namespace: wordbuddy
spec:
  selector:
    app: notification-api
  ports:
    - port: 8080
      targetPort: 8080
