WordBuddy/k8s/quiz-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: quiz-api
  namespace: wordbuddy
spec:
  selector:
    app: quiz-api
  ports:
    - port: 8080
      targetPort: 8080
