WordBuddy/k8s/sqlserver-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sqlserver
  namespace: wordbuddy
spec:
  selector:
    app: sqlserver
  ports:
    - port: 1433
      targetPort: 1433
  clusterIP: None
